--- a/code/app-nepcorte/package.json
+++ b/code/app-nepcorte/package.json
@@ -9,11 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.13",
     "expo": "~47.0.12",
+    "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-paper": "^4.12.5",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
+    "react-navigation-material-bottom-tabs": "^2.3.5",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
