--- a/code/app-nepcorte/package.json
+++ b/code/app-nepcorte/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-element-dropdown": "^2.8.1",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^4.12.5",
     "react-native-progress-steps": "^1.3.4",
