Ajustes adicionais na triagem

--- a/code/app-nepcorte/app.json
+++ b/code/app-nepcorte/app.json
@@ -7,9 +7,9 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splashNepcorte.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#EC441E"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
