--- a/code/app-nepcorte/package.json
+++ b/code/app-nepcorte/package.json
@@ -19,6 +19,7 @@
     "expo": "~47.0.12",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-element-dropdown": "^2.8.1",
@@ -31,7 +32,8 @@
     "react-native-svg": "^13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
