--- a/code/app-nepcorte/package.json
+++ b/code/app-nepcorte/package.json
@@ -33,7 +33,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "expo-camera": "~13.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
