--- a/code/app-nepcorte/app.json
+++ b/code/app-nepcorte/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "app-nepcorte",
-    "slug": "app-nepcorte",
+    "name": "NEPCORTE",
+    "slug": "nepcorte",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splashNepcorte.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#EC441E"
     },
