--- a/code/app-nepcorte/package.json
+++ b/code/app-nepcorte/package.json
@@ -17,6 +17,8 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.12",
+    "expo-camera": "~13.1.0",
+    "expo-dev-client": "~2.0.1",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
@@ -33,8 +35,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "yup": "^1.0.2",
-    "expo-camera": "~13.1.0"
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
