ajustando nome do app

--- a/code/app-nepcorte/app.json
+++ b/code/app-nepcorte/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "NEPCORTE",
+    "name": "TopCarne",
     "slug": "nepcorte",
     "version": "1.0.0",
     "orientation": "portrait",
