--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -23,3 +23,9 @@ six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
 uritemplate==4.1.1
+pathlib==1.0.1
+torch>=2.2.1
+torchvision>=0.17.1
+Pillow>=9.4.0
+segmentation_models_pytorch>=0.3.3
+six>=1.16.0
