--- a/code/app-nepcorte/package.json
+++ b/code/app-nepcorte/package.json
@@ -23,7 +23,7 @@
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
     "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-element-dropdown": "^2.8.1",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-input-outline": "^1.5.2",
@@ -31,7 +31,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
