--- a/code/app-nepcorte/package.json
+++ b/code/app-nepcorte/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~47.0.12",
     "expo-camera": "~13.1.0",
     "expo-dev-client": "~2.0.1",
