--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -1,31 +1,60 @@
 asgiref==3.7.2
 attrs==23.1.0
+certifi==2024.2.2
 cffi==1.16.0
+charset-normalizer==3.3.2
+colorama==0.4.6
 cryptography==41.0.4
 Django==4.2.5
+django-filter==24.2
 django-model-utils==4.3.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-spectacular==0.26.5
+drf-yasg==1.21.7
+efficientnet_pytorch==0.7.1
+filelock==3.14.0
+fsspec==2024.5.0
 gunicorn==21.2.0
+huggingface-hub==0.23.0
+idna==3.7
 inflection==0.5.1
+intel-openmp==2021.4.0
+Jinja2==3.1.4
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
+MarkupSafe==2.1.5
+mkl==2021.4.0
+mpmath==1.3.0
+munch==4.0.0
+networkx==3.3
+numpy==1.26.4
 packaging==23.2
+pathlib==1.0.1
+pillow==10.3.0
+pretrainedmodels==0.7.4
 pycparser==2.21
 PyJWT==1.7.1
 PyMySQL==1.1.0
+python-dotenv==1.0.1
 pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.30.2
+requests==2.31.0
 rpds-py==0.10.6
+safetensors==0.4.3
+segmentation-models-pytorch==0.3.3
+setuptools==69.5.1
 six==1.16.0
 sqlparse==0.4.4
+sympy==1.12
+tbb==2021.12.0
+timm==0.9.2
+torch==2.3.0
+torchvision==0.18.0
+tqdm==4.66.4
 typing_extensions==4.8.0
+tzdata==2024.1
 uritemplate==4.1.1
-pathlib==1.0.1
-torch>=2.2.1
-torchvision>=0.17.1
-Pillow>=9.4.0
-segmentation_models_pytorch>=0.3.3
-six>=1.16.0
+urllib3==2.2.1
+utils==1.0.2
