--- a/code/app-nepcorte/package.json
+++ b/code/app-nepcorte/package.json
@@ -17,14 +17,14 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "~47.0.12",
+    "expo": "^51.0.21",
     "expo-camera": "~13.1.0",
-    "expo-dev-client": "~2.0.1",
+    "expo-dev-client": "~4.0.20",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
     "react": "18.1.0",
-    "react-native": "0.70.8",
+    "react-native": "^0.74.3",
     "react-native-element-dropdown": "^2.8.1",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-input-outline": "^1.5.2",
