--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.3.2
 colorama==0.4.6
 cryptography==41.0.4
 Django==4.2.5
+django-cors-headers==4.4.0
 django-filter==24.2
 django-model-utils==4.3.1
 djangorestframework==3.14.0
