Sistema de autenticação funcionando, token sendo salvo no asyncstorage, e tratando o erro 401

--- a/code/nepcorte-app/app.json
+++ b/code/nepcorte-app/app.json
@@ -37,6 +37,15 @@
       "eas": {
         "projectId": "7eee9620-c3a9-47a9-9b7c-c6de48ad0fe3"
       }
-    }
+    },
+    "plugins": [
+      "react-native-vision-camera",
+      [
+        "react-native-vision-camera",
+        {
+          "cameraPermissionText": "$TopCarne precisa do acesso à Câmera."
+        }
+      ]
+    ]
   }
 }
