--- a/code/nepcorte-app/package.json
+++ b/code/nepcorte-app/package.json
@@ -2,14 +2,14 @@
   "name": "nep-corte",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
-
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/material-bottom-tabs": "^6.2.13",
     "@react-navigation/native": "^6.1.6",
@@ -22,16 +22,16 @@
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.24",
-    "expo-app-loading": "^1.0.3",
-    "expo-camera": "~15.0.14",
-    "expo-font": "~12.0.9",
+    "expo": "~51.0.31",
+    "expo-app-loading": "^1.3.0",
+    "expo-camera": "~15.0.16",
+    "expo-font": "~12.0.10",
     "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "^0.74.5",
     "react-native-element-dropdown": "^2.8.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-input-outline": "^1.5.2",
@@ -42,6 +42,7 @@
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-vision-camera": "^4.5.3",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "yup": "^1.0.2"
