--- a/code/nepcorte-app/package.json
+++ b/code/nepcorte-app/package.json
@@ -28,6 +28,7 @@
     "expo-font": "~12.0.10",
     "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
     "react": "18.2.0",
@@ -45,7 +46,8 @@
     "react-native-vision-camera": "^4.5.3",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "react-native-view-shot": "3.8.0"
   },
   "Dependencies": {
     "@babel/core": "^7.20.0"
