--- a/code/nepcorte-app/package.json
+++ b/code/nepcorte-app/package.json
@@ -26,7 +26,7 @@
     "expo-app-loading": "^1.3.0",
     "expo-camera": "~15.0.16",
     "expo-font": "~12.0.10",
-    "expo-splash-screen": "^0.27.6",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "formik": "^2.4.6",
@@ -47,7 +47,8 @@
     "react-native-vision-camera": "^4.5.3",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "expo-file-system": "~17.0.1"
   },
   "Dependencies": {
     "@babel/core": "^7.20.0"
