--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -1,5 +1,8 @@
+ansicon==1.89.0
+arrow==1.3.0
 asgiref==3.7.2
 attrs==23.1.0
+blessed==1.20.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -9,6 +12,8 @@ Django==4.2.5
 django-cors-headers==4.4.0
 django-filter==24.2
 django-model-utils==4.3.1
+django-picklefield==3.2
+django-q==1.3.9
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-spectacular==0.26.5
@@ -22,6 +27,7 @@ idna==3.7
 inflection==0.5.1
 intel-openmp==2021.4.0
 Jinja2==3.1.4
+jinxed==1.3.0
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 MarkupSafe==2.1.5
@@ -37,9 +43,11 @@ pretrainedmodels==0.7.4
 pycparser==2.21
 PyJWT==1.7.1
 PyMySQL==1.1.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2023.3.post1
 PyYAML==6.0.1
+redis==3.5.3
 referencing==0.30.2
 requests==2.31.0
 rpds-py==0.10.6
@@ -54,8 +62,10 @@ timm==0.9.2
 torch==2.3.0
 torchvision==0.18.0
 tqdm==4.66.4
+types-python-dateutil==2.9.0.20241003
 typing_extensions==4.8.0
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
 utils==1.0.2
+wcwidth==0.2.13
