--- a/code/nepcorte-app/package.json
+++ b/code/nepcorte-app/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^21.0.0",
+    "@react-native-firebase/messaging": "^21.0.0",
     "@react-navigation/material-bottom-tabs": "^6.2.13",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -25,7 +27,9 @@
     "expo": "~51.0.31",
     "expo-app-loading": "^1.3.0",
     "expo-camera": "~15.0.16",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
+    "expo-permissions": "^14.4.0",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -47,8 +51,7 @@
     "react-native-vision-camera": "^4.5.3",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "yup": "^1.0.2",
-    "expo-file-system": "~17.0.1"
+    "yup": "^1.0.2"
   },
   "Dependencies": {
     "@babel/core": "^7.20.0"
