--- a/code/nepcorte-app/app.json
+++ b/code/nepcorte-app/app.json
@@ -21,12 +21,14 @@
       "bundleIdentifier": "br.dev.ness.nepcorte",
       "buildNumber": "1.0.0",
       "supportsTablet": true,
+      "googleServicesFile": "./google-services.json",
       "entitlements": {
         "aps-environment": "production"
       }
     },
     "android": {
       "package": "br.dev.ness.nepcorte",
+      "googleServicesFile": "./google-services.json",
       "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
@@ -45,11 +47,20 @@
       }
     },
     "plugins": [
+      "@react-native-firebase/app",
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "useFrameworks": "static"
+          }
+        }
+      ],
       [
         "expo-camera",
         {
-          "cameraPermission": "Allow NepCorte to access your camera",
-          "microphonePermission": "Allow NepCorte to access your microphone",
+          "cameraPermission": "Dar ao NepCorte o acesso a câmera",
+          "microphonePermission": "Dar ao NepCorte o acesso ao microfone",
           "recordAudioAndroid": true
         }
       ]
