--- a/code/nepcorte-app/package.json
+++ b/code/nepcorte-app/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-clipboard/clipboard": "^1.14.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^21.0.0",
     "@react-native-firebase/messaging": "^21.0.0",
@@ -21,40 +22,55 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "@unimodules/core": "^7.1.2",
     "@unimodules/react-native-adapter": "^6.3.9",
+    "assert": "^2.1.0",
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
+    "body-parser": "^1.20.3",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.31",
+    "expo": "^51.0.0",
     "expo-app-loading": "^1.3.0",
     "expo-camera": "~15.0.16",
+    "expo-constants": "^16.0.2",
+    "expo-device": "^6.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
+    "expo-notifications": "^0.28.18",
     "expo-permissions": "^14.4.0",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
+    "pod-install": "^0.2.2",
+    "qs": "^6.13.0",
     "react": "18.2.0",
-    "react-native": "^0.74.5",
+    "react-native": "0.74.5",
     "react-native-element-dropdown": "^2.8.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-input-outline": "^1.5.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.5.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-view-shot": "3.8.0",
     "react-native-vision-camera": "^4.5.3",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "yup": "^1.0.2"
+    "semver": "^7.6.3",
+    "xml2js": "^0.6.2",
+    "yup": "^1.0.2",
+    "expo-clipboard": "~6.0.3"
   },
   "Dependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "expo-build-properties": "^0.12.5"
+  }
 }
