--- a/back-end/.env_example
+++ b/back-end/.env_example
@@ -5,10 +5,4 @@ MYSQL_ROOT_PASSWORD = 'EXAMPLE'
 MYSQL_HOST= 'EXAMPLE'
 MYSQL_PORT= 'EXAMPLE'
 
-EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend' 
-EMAIL_HOST='smtp.office365.com' #for outlook emails
-EMAIL_PORT=587
-EMAIL_USE_TLS=True
-EMAIL_USE_SSL=False
-EMAIL_HOST_USER='YOUR EMAIL'
-EMAIL_HOST_PASSWORD='YOUR PASSWORD'
+SENDGRID_API_KEY = 'SENDGRID_KEY'
