--- a/code/nepcorte-app/package.json
+++ b/code/nepcorte-app/package.json
@@ -27,16 +27,17 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "body-parser": "^1.20.3",
     "date-fns": "^3.6.0",
-    "expo": "^51.0.0",
+    "expo": "^52.0.5",
     "expo-app-loading": "^1.3.0",
     "expo-camera": "~15.0.16",
+    "expo-clipboard": "~6.0.3",
     "expo-constants": "^16.0.2",
     "expo-device": "^6.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
-    "expo-notifications": "^0.28.18",
+    "expo-notifications": "^0.28.19",
     "expo-permissions": "^14.4.0",
-    "expo-splash-screen": "~0.27.6",
+    "expo-splash-screen": "^0.27.7",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "formik": "^2.4.6",
@@ -63,8 +64,7 @@
     "redux": "^4.2.1",
     "semver": "^7.6.3",
     "xml2js": "^0.6.2",
-    "yup": "^1.0.2",
-    "expo-clipboard": "~6.0.3"
+    "yup": "^1.0.2"
   },
   "Dependencies": {
     "@babel/core": "^7.20.0"
