--- a/code/nepcorte-app/package.json
+++ b/code/nepcorte-app/package.json
@@ -29,36 +29,36 @@
     "date-fns": "^3.6.0",
     "expo": "^52.0.5",
     "expo-app-loading": "^1.3.0",
-    "expo-camera": "~15.0.16",
-    "expo-clipboard": "~6.0.3",
-    "expo-constants": "^16.0.2",
-    "expo-device": "^6.0.2",
-    "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.10",
-    "expo-notifications": "^0.28.19",
+    "expo-camera": "~16.0.5",
+    "expo-clipboard": "~7.0.0",
+    "expo-constants": "~17.0.2",
+    "expo-device": "~7.0.1",
+    "expo-file-system": "~18.0.3",
+    "expo-font": "~13.0.1",
+    "expo-notifications": "^0.29.7",
     "expo-permissions": "^14.4.0",
-    "expo-splash-screen": "^0.27.7",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
+    "expo-splash-screen": "^0.29.8",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.2",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
     "pod-install": "^0.2.2",
     "qs": "^6.13.0",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "^18.3.1",
+    "react-native": "^0.76.1",
     "react-native-element-dropdown": "^2.8.1",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-input-outline": "^1.5.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.12.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.0.0",
+    "react-native-svg": "^15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-view-shot": "3.8.0",
+    "react-native-view-shot": "~4.0.0",
     "react-native-vision-camera": "^4.5.3",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
@@ -71,6 +71,6 @@
   },
   "private": true,
   "devDependencies": {
-    "expo-build-properties": "^0.12.5"
+    "expo-build-properties": "^0.13.1"
   }
 }
