--- a/code/nepcorte-front-end/nepcorte/package.json
+++ b/code/nepcorte-front-end/nepcorte/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.14.3",
+    "@react-native-community/cli-platform-android": "^15.1.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^21.0.0",
     "@react-native-firebase/messaging": "^21.0.0",
