--- a/code/nepcorte-front-end/nepcorte/android/app/build.gradle
+++ b/code/nepcorte-front-end/nepcorte/android/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
-apply plugin: 'maven-publish'
+apply plugin: 'maven'
 
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
 
