--- a/code/nepcorte-front-end/nepcorte/package.json
+++ b/code/nepcorte-front-end/nepcorte/package.json
@@ -36,6 +36,7 @@
     "expo-device": "~7.0.1",
     "expo-file-system": "~18.0.3",
     "expo-font": "~13.0.1",
+    "expo-modules-core": "^2.0.6",
     "expo-notifications": "^0.29.8",
     "expo-permissions": "^14.4.0",
     "expo-splash-screen": "^0.29.11",
