--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -14,6 +14,7 @@ django-filter==24.2
 django-model-utils==4.3.1
 django-picklefield==3.2
 django-q==1.3.9
+django-sendgrid-v5==1.2.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-spectacular==0.26.5
@@ -45,6 +46,7 @@ PyJWT==1.7.1
 PyMySQL==1.1.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-http-client==3.3.7
 pytz==2023.3.post1
 PyYAML==6.0.1
 redis==3.5.3
@@ -53,9 +55,11 @@ requests==2.31.0
 rpds-py==0.10.6
 safetensors==0.4.3
 segmentation-models-pytorch==0.3.3
+sendgrid==6.11.0
 setuptools==69.5.1
 six==1.16.0
 sqlparse==0.4.4
+starkbank-ecdsa==2.2.0
 sympy==1.12
 tbb==2021.12.0
 timm==0.9.2
