--- a/code/nepcorte-front-end/nepcorte/package.json
+++ b/code/nepcorte-front-end/nepcorte/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "start:dev": "cross-env NODE_ENV=development expo start",
+    "start:prod": "cross-env NODE_ENV=production expo start"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -48,6 +50,7 @@
     "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-native": "^0.76.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.8.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-input-outline": "^1.5.2",
@@ -73,6 +76,7 @@
   },
   "private": true,
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "expo-build-properties": "^0.13.1"
   }
 }
