--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -23,25 +23,23 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
-    "@unimodules/core": "^7.1.2",
-    "@unimodules/react-native-adapter": "^6.3.9",
     "assert": "^2.1.0",
     "axios": "^1.7.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "body-parser": "^1.20.3",
     "date-fns": "^3.6.0",
-    "expo": "~52.0.7",
+    "expo": "~52.0.35",
     "expo-app-loading": "^1.3.0",
     "expo-camera": "~16.0.5",
     "expo-clipboard": "~7.0.0",
-    "expo-constants": "~17.0.3",
+    "expo-constants": "~17.0.6",
     "expo-device": "~7.0.1",
     "expo-file-system": "~18.0.3",
     "expo-font": "~13.0.1",
-    "expo-modules-core": "^2.0.6",
+    "expo-modules-core": "~2.2.2",
     "expo-notifications": "^0.29.8",
     "expo-permissions": "^14.4.0",
-    "expo-splash-screen": "^0.29.11",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
     "formik": "^2.4.6",
@@ -57,9 +55,9 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.0.0",
-    "react-native-svg": "^15.8.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^9.2.0",
