--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -6,6 +6,9 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "cli": {
+      "appVersionSource": "expoConfig"
+    },
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
