--- a/mobile-app/eas.json
+++ b/mobile-app/eas.json
@@ -1,9 +1,9 @@
 {
   "cli": {
     "version": ">= 3.11.0",
-    "requireCommit": true
+    "requireCommit": true,
+    "appVersionSource": "remote"
   },
-  
   "build": {
     "development": {
       "developmentClient": true,
@@ -15,7 +15,9 @@
         "buildType": "apk"
       }
     },
-    "production": {}
+    "production": {
+      "autoIncrement": true
+    }
   },
   "submit": {
     "production": {}
