--- a/mobile-app/android/settings.gradle
+++ b/mobile-app/android/settings.gradle
@@ -21,7 +21,7 @@ extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
   }
 }
 
-rootProject.name = 'nep-corte'
+rootProject.name = 'TopCarne'
 
 dependencyResolutionManagement {
   versionCatalogs {
