--- a/mobile-app/eas.json
+++ b/mobile-app/eas.json
@@ -1,8 +1,6 @@
 {
   "cli": {
-    "version": ">= 3.11.0",
-    "requireCommit": true,
-    "appVersionSource": "remote"
+    "appVersionSource": "local"
   },
   "build": {
     "development": {
@@ -15,9 +13,7 @@
         "buildType": "apk"
       }
     },
-    "production": {
-      "autoIncrement": true
-    }
+    "production": {}
   },
   "submit": {
     "production": {}
