--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -1,9 +1,8 @@
 {
   "name": "nep-corte",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -44,8 +43,8 @@
     "moment": "^2.30.1",
     "pod-install": "^0.2.2",
     "qs": "^6.13.0",
-    "react": "^18.3.1",
-    "react-native": "^0.76.2",
+    "react": "18.3.1",
+    "react-native": "0.76.7",
     "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.8.1",
     "react-native-gesture-handler": "~2.20.2",
@@ -73,6 +72,7 @@
   "private": true,
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "expo-build-properties": "^0.13.1"
+    "expo-build-properties": "^0.13.1",
+    "@babel/core": "^7.20.0"
   }
 }
